[fixed]:	Models were being included multiple times when using the Object::request method.
[fixed]:	Object::request for the current controller would return a new instance of the controller
			but now returns the current instance.
[new]:		Basic testing for new environments, confirmed working in PHP 5.1.x, 5.2.x and 5.3.x.

<12th August 2010>
-----------------------------------------------
[fixed]:	MySQL Class now acts more like MySQLi. Created new classes for MySQL to allow
			creation of query objects and prepared statement objects.
[fixed]:	MySQLi is now not loaded by PDO, fixing the invalid driver issue.
[new]:		Added Model::get_param to allow cleaner loading of a parameter inside models.
[deleted]:	Removed the MySQLi driver as the MySQL driver now mimics MySQLi as closely
			as it can.
[changed]:	Database config items now in their own database.php config file.
[new]:		Added PDO and PDO Drivers Available to Installation Tests.
[changed]:	Inflector is only loaded where required.
[fixed]:	Smarty would encounter supressed errors but error reporting would still display
			them.
[new]:		Errors::ignore and Errors::unignore, to turn error reporting on and off.
[fixed]:	Hooks Controller.beforeConstruct, Controller.afterConstruct and Controller.after
			were not working correctly.
[fixed]:	Smarty extender now hooks correctly into the core.
[fixed]:	Default configuration settings now more appropriate.
[fixed]:	View library bug, some properties were still static and methods were calling static
			properties.
[fixed]:	Controller library now has $helpers not $__helpers, was causing a bug with the actual
			controller.
[fixed]:	Request used General.enable_query_string instead of General.enable_friendly_urls

<11th August 2010>
-----------------------------------------------
[changed]:	Update the MySQL class, changed name to DBDriver to allow multiple drivers.
[new]:		Added PDO support, to allow a better database layer for portability of applications.